--- a/LogProject/appsettings.json
+++ b/LogProject/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "db": {
-    "sqlconnection": "Data Source=39.104.87.16;database=log4netdb;uid=sa;pwd=Lic123456;"
+    "sqlconnection": "Data Source=.;database=log4netdb;integrated security=true"
   },
   "Logging": {
     "IncludeScopes": false,
