update by core 2.1.301

--- a/LogProject/appsettings.json
+++ b/LogProject/appsettings.json
@@ -1,11 +1,12 @@
-﻿{
-  "db": {
-    "sqlconnection": "Data Source=.;database=log4netdb;integrated security=true"
-  },
+{
   "Logging": {
-    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "ConnectionStrings":{
+    "sqlconnection":"server=.;database=log4netdb;integrated security=true"
+  },
+   
+  "AllowedHosts": "*"
 }
